--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -42,7 +42,8 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 # fade-delta = 10
 fade-exclude = [
-  "class_g = 'slop'"   # maim
+  "class_g = 'slop'",   # maim
+  "class_g *?= 'screenkey'",
 ]
 # no-fading-openclose = false
 # no-fading-destroyed-argb = false
@@ -66,7 +67,8 @@ focus-exclude = [
 # inactive-dim-fixed = 1.0
 opacity-rule = [
   "80:class_g     = 'Bar'",             # lemonbar
-  "100:class_g    = 'slop'",            # maim
+  "80:class_g    = 'slop'",            # maim
+  "50:class_g    *?= 'screenkey'",
   "100:class_g    = 'XTerm'",
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
@@ -81,7 +83,8 @@ opacity-rule = [
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'",
 #  "50:class_g    = 'hints'",
-   "50:class_g    = 'dunst'",
+  "50:class_g    = 'dunst'",
+  "80:class_g = 'meld'",
 ];
 
 # Background-Blurring
@@ -106,6 +109,7 @@ blur: {
 }
 blur-background-exclude = [
   "class_g = 'slop'",
+  "class_g *?= 'screenkey'",
   "name = 'hints'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
