--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -63,6 +63,7 @@ focus-exclude = [
   "class_g = 'Bar'",                    # lemonbar
   "class_g = 'slop'",                    # maim
   "class_g = 'hints'",
+  "name = 'wmfocus'"
 ];
 # inactive-dim-fixed = 1.0
 opacity-rule = [
@@ -85,6 +86,13 @@ opacity-rule = [
 #  "50:class_g    = 'hints'",
   "50:class_g    = 'dunst'",
   "80:class_g = 'meld'",
+  "89:class_g = 'ChatGPT'",
+  "89:class_g = 'Gemini'",
+  "89:class_g = 'ClaudeApp'",
+  "79:class_g = 'YouTubeMusic'",
+  "69:class_g = 'ChessDotCom'",
+  "90:name = 'wmfocus'",
+  "90:class_g = 'Code'"
 ];
 
 # Background-Blurring
